--- a/Source/CharliePartScriptApp/CharliePartScriptApp_android_x86_vs2010_anarchy.vcxproj
+++ b/Source/CharliePartScriptApp/CharliePartScriptApp_android_x86_vs2010_anarchy.vcxproj
@@ -1,13 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!--
-    
-    
-    
-    SOURCE_LEVEL = "PUBLIC"
-    REQUIRED_HAVOK_PRODUCTS = "VISION"
-  -->
-        
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|hkAndroid">
       <Configuration>Debug</Configuration>
@@ -23,111 +15,135 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{BD88A2F5-9A0F-46ED-B8B2-CCD9F8152F2E}</ProjectGuid>
-    <TargetFrameworkVersion></TargetFrameworkVersion>
-    <Keyword>Application</Keyword>
-    <RootNamespace></RootNamespace>
-    <ProjectName>ProjectCharlieApp</ProjectName>
-    
+    <ProjectGuid>{B40FEE44-CDFB-4FDA-A8E0-310875500232}</ProjectGuid>
+    <RootNamespace>
+    </RootNamespace>
+    <ProjectName>CharliePartScriptApp</ProjectName>
   </PropertyGroup>
-<Import Project="$(VISION_SDK)\Build\MSBuild\Microsoft.Cpp.Default.props" />
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
-        <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyDebugDLL.props" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
-        <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyDevDLL.props" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
-        <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyReleaseDLL.props" />
-    </ImportGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>x86-4.8</PlatformToolset>
-    <AndroidAPILevel>android-10</AndroidAPILevel>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
+    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyDebug.props" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
+    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyDev.props" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
+    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\Application_android_x86_vs2010_anarchyRelease.props" />
+  </ImportGroup>
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
+    <PlatformToolset>x86-4.6</PlatformToolset>
     <AndroidArch>x86</AndroidArch>
-    <AndroidStlType>stlport_static</AndroidStlType>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>x86-4.8</PlatformToolset>
-    <AndroidAPILevel>android-10</AndroidAPILevel>
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
+    <PlatformToolset>x86-4.6</PlatformToolset>
     <AndroidArch>x86</AndroidArch>
-    <AndroidStlType>stlport_static</AndroidStlType>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>x86-4.8</PlatformToolset>
-    <AndroidAPILevel>android-10</AndroidAPILevel>
+  <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
+    <PlatformToolset>x86-4.6</PlatformToolset>
     <AndroidArch>x86</AndroidArch>
-    <AndroidStlType>stlport_static</AndroidStlType>
   </PropertyGroup>
-  <Import Project="$(VISION_SDK)\Build\MSBuild\Microsoft.Cpp.props" />
-  <PropertyGroup>
-<TargetExt  Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">.so</TargetExt>
-<TargetExt  Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">.so</TargetExt>
-<TargetExt  Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">.so</TargetExt>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">../../Obj/android_x86_vs2010_anarchy/Debug/ProjectCharlieApp\</IntDir>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">../../Bin/android_x86_vs2010_anarchy/Debug\</OutDir>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">ProjectCharlieApp</TargetName>
-    <OutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">../../Obj/android_x86_vs2010_anarchy/Dev/ProjectCharlieApp\</IntDir>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">../../Bin/android_x86_vs2010_anarchy/Dev\</OutDir>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">ProjectCharlieApp</TargetName>
-    <OutputFile Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">../../Obj/android_x86_vs2010_anarchy/Release/ProjectCharlieApp\</IntDir>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">../../Bin/android_x86_vs2010_anarchy/Release\</OutDir>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">ProjectCharlieApp</TargetName>
-    <OutputFile Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'"></LinkIncremental>
-    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'"></LinkIncremental>
-    <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'"></LinkIncremental>
-  </PropertyGroup>
-    <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
-        <Link>
-            <AdditionalDependencies>-lProjectCharlieEnginePlugin;%(AdditionalDependencies)</AdditionalDependencies>
-        </Link>
-    </ItemDefinitionGroup>
-    <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
-        <Link>
-            <AdditionalDependencies>-lProjectCharlieEnginePlugin;%(AdditionalDependencies)</AdditionalDependencies>
-        </Link>
-    </ItemDefinitionGroup>
-    <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
-        <Link>
-            <AdditionalDependencies>-lProjectCharlieEnginePlugin;%(AdditionalDependencies)</AdditionalDependencies>
-        </Link>
-    </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="ProjectCharlieAppPCH.h">
-        <DeploymentContent>False</DeploymentContent></ClInclude>
-    <ClCompile Include="$(NDKROOT)\sources\android\native_app_glue\android_native_app_glue.c">
-        <CompileAsWinRT>false</CompileAsWinRT>
-        <AdditionalOptions> </AdditionalOptions>
-        <DeploymentContent>False</DeploymentContent></ClCompile>
-    <Java Include="Android/VirtualKeyboardActivity.java"><DeploymentContent>False</DeploymentContent></Java>
-    <Java Include="Android/VNativeDialogAndroid.java"><DeploymentContent>False</DeploymentContent></Java>
-    <ClCompile Include="Main.cpp">
-        <DeploymentContent>False</DeploymentContent></ClCompile>
-    <ClCompile Include="ProjectCharlieAppPCH.cpp">
-        <DeploymentContent>False</DeploymentContent></ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
-<Import Project="$(VISION_SDK)\Build\MSBuild\Microsoft.Cpp.targets" />
-<PropertyGroup>
-    <CleanDependsOn>ProjectCharlieApp_CleanReflections;$(CleanDependsOn)</CleanDependsOn>
-</PropertyGroup>
-<Target Name="ProjectCharlieApp_CleanReflections">
-    <Delete Files="$(MSBuildProjectDirectory)\reflectionSettings.cache;$(MSBuildProjectDirectory)\reflections.db" />
-</Target>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+  <ImportGroup Label="ExtensionSettings">
+  </ImportGroup>
+  <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
-</PropertyGroup>
+    <OutDir>..\..\Bin\android_x86_vs2010_anarchy\$(Configuration)\</OutDir>
+    <IntDir>..\..\Obj\android_x86_vs2010_anarchy\$(Configuration)\CharliePartScriptApp\</IntDir>
+    <TargetName>CharliePartScriptApp</TargetName>
+    <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
-</PropertyGroup>
+    <TargetName>CharliePartScriptApp</TargetName>
+    <OutDir>..\..\Bin\android_x86_vs2010_anarchy\$(Configuration)\</OutDir>
+    <IntDir>..\..\Obj\android_x86_vs2010_anarchy\$(Configuration)\CharliePartScriptApp\</IntDir>
+    <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
-</PropertyGroup>
-<PropertyGroup>
-</PropertyGroup>
+    <TargetName>CharliePartScriptApp</TargetName>
+    <OutDir>..\..\Bin\android_x86_vs2010_anarchy\$(Configuration)\</OutDir>
+    <IntDir>..\..\Obj\android_x86_vs2010_anarchy\$(Configuration)\CharliePartScriptApp\</IntDir>
+    <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
+  </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
+    <ClCompile>
+      <PrecompiledHeader>Yes</PrecompiledHeader>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
+    <ClCompile>
+      <PrecompiledHeaderFile>CharliePartScriptAppPCH.h</PrecompiledHeaderFile>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|hkAndroid'">
+    <ClCompile>
+      <PrecompiledHeaderOutputFile>$(IntDir)CharliePartScriptAppPCH.pch</PrecompiledHeaderOutputFile>
+      <PreprocessorDefinitions>ANIMATIONMODULE_IMPORTS;VHAVOKMODULE_IMPORTS;VHAVOKBEHAVIORMODULE_IMPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <AdditionalDependencies>-lVisionAppD;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\Lib\android_x86_vs2010_anarchy\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
+    <Deploy>
+      <DeployTool>$(VISION_SDK)\Build\StandaloneTools\Deployment\Exe\deployAndroid.exe</DeployTool>
+      <ResDir>..\..\Data\Common\Anarchy\Android</ResDir>
+      <Install>true</Install>
+      <WriteExternal>true</WriteExternal>
+      <Internet>true</Internet>
+      <Libraries>$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodexL.so;$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodeventL.so</Libraries>
+      <Assets>..\../Data/Vision/Base/ Data/Vision/Base/;..\../Assets/ Assets/</Assets>
+    </Deploy>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dev|hkAndroid'">
+    <ClCompile>
+      <PrecompiledHeader>Yes</PrecompiledHeader>
+      <PrecompiledHeaderFile>CharliePartScriptAppPCH.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderOutputFile>$(IntDir)CharliePartScriptAppPCH.pch</PrecompiledHeaderOutputFile>
+      <PreprocessorDefinitions>ANIMATIONMODULE_IMPORTS;VHAVOKMODULE_IMPORTS;VHAVOKBEHAVIORMODULE_IMPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>..\..\Lib\android_x86_vs2010_anarchy\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>-lVisionApp;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+    <Deploy>
+      <DeployTool>$(VISION_SDK)\Build\StandaloneTools\Deployment\Exe\deployAndroid.exe</DeployTool>
+      <ResDir>..\..\Data\Common\Anarchy\Android</ResDir>
+      <Install>true</Install>
+      <WriteExternal>true</WriteExternal>
+      <Internet>true</Internet>
+      <Libraries>$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodex.so;$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodevent.so</Libraries>
+      <Assets>..\../Data/Vision/Base/ Data/Vision/Base/;..\../Assets/ Assets/</Assets>
+    </Deploy>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|hkAndroid'">
+    <ClCompile>
+      <PrecompiledHeader>Yes</PrecompiledHeader>
+      <PrecompiledHeaderFile>CharliePartScriptAppPCH.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderOutputFile>$(IntDir)CharliePartScriptAppPCH.pch</PrecompiledHeaderOutputFile>
+      <PreprocessorDefinitions>ANIMATIONMODULE_IMPORTS;VHAVOKMODULE_IMPORTS;VHAVOKBEHAVIORMODULE_IMPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>..\..\Lib\android_x86_vs2010_anarchy\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>-lVisionApp;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+    <Deploy>
+      <DeployTool>$(VISION_SDK)\Build\StandaloneTools\Deployment\Exe\deployAndroid.exe</DeployTool>
+      <ResDir>..\..\Data\Common\Anarchy\Android</ResDir>
+      <Install>true</Install>
+      <WriteExternal>true</WriteExternal>
+      <Internet>true</Internet>
+      <Libraries>$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodex.so;$(HAVOK_THIRDPARTY_DIR)/redistsdks/fmod/4.44.23/lib/android/x86/libfmodevent.so</Libraries>
+      <Assets>..\../Data/Vision/Base/ Data/Vision/Base/;..\../Assets/ Assets/</Assets>
+    </Deploy>
+  </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="$(NDKROOT)\sources\android\native_app_glue\android_native_app_glue.c" />
+    <ClCompile Include="CharliePartScriptAppPCH.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CharliePartScriptAppPCH.h" />
+  </ItemGroup>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <ImportGroup Label="ExtensionTargets">
+  </ImportGroup>
 </Project>
