--- a/Source/ProjectCharlieApp/ProjectCharlieAppDX9_win32_vs2010_anarchy.vcxproj
+++ b/Source/ProjectCharlieApp/ProjectCharlieAppDX9_win32_vs2010_anarchy.vcxproj
@@ -27,10 +27,10 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|win32'">
-    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\ApplicationDX9_win32_vs2010_anarchyDebugDLL.props" />
+    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\ApplicationDX9_win32_vs2010_anarchyDebug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Dev|win32'">
-    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\ApplicationDX9_win32_vs2010_anarchyDevDLL.props" />
+    <Import Project="$(VISION_SDK)\Build\Vision\PropertySheets\ApplicationDX9_win32_vs2010_anarchyDev.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|win32'" Label="Configuration">
     <CharacterSet>Unicode</CharacterSet>
@@ -66,6 +66,8 @@
     <Link>
       <AdditionalDependencies>CharlieNPCPlugin.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\Lib\win32_vs2010_anarchy\debug_dll;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <ImportLibrary>
+      </ImportLibrary>
     </Link>
     <ClCompile>
       <PreprocessorDefinitions>ANIMATIONMODULE_IMPORTS;VHAVOKMODULE_IMPORTS;VHAVOKBEHAVIORMODULE_IMPORTS;CHARLIEPLUGIN_EXPORTS;CHARLIEPLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -75,6 +77,8 @@
     <Link>
       <AdditionalDependencies>CharlieNPCPlugin.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\..\Lib\win32_vs2010_anarchy\dev_dll;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <ImportLibrary>
+      </ImportLibrary>
     </Link>
     <ClCompile>
       <PreprocessorDefinitions>ANIMATIONMODULE_IMPORTS;VHAVOKMODULE_IMPORTS;VHAVOKBEHAVIORMODULE_IMPORTS;CHARLIEPLUGIN_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
